--- a/.github/workflows/lay.yml
+++ b/.github/workflows/lay.yml
@@ -1,1 +1,11 @@
-
+on:
+  pull_request:
+  push:
+    branches: master
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Test
+        run: echo "done"
